--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "gulp-shadow",
+  "name": "gulp-shadow-library",
   "description": "SVG Library",
-  "version": "0.0.7",
+  "version": "0.0.8",
   "repository": "git://github.com/Tolmark12/gulp-shadow-icons.git",
   "author": "Mark Parson",
   "main": "./index.js",
