changed the name of the package to avoid confusion

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "gulp-shadow-library",
+  "name": "gulp-shadow-icons",
   "description": "SVG Library",
   "version": "1.0.2",
   "repository": "git://github.com/Tolmark12/gulp-shadow-icons.git",
